fixing logo cutoff

--- a/awechords.css
+++ b/awechords.css
@@ -54,7 +54,7 @@ p{
   background: url(images/banner1.jpg);
 	background-size: cover;
 	max-width:100%;
-	margin-top:50px;
+	margin-top:55px;
 	height:450px;
 	background-position: center;
 }
